# python-templates

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURES.md  CI-ARCHITECTURE.md  Makefile  README.md  TASK.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: BRANCH_PROTECTION.md  CI-ARCHITECTURE.md  SETUP.md  copilot-instructions.md
.github/workflows/: ci.yml  monorepo-ci.yml
scripts/: check_branch.py  create_package.py  push_submodules.py  role_review.py
shared/: __init__.py
templates/: .pre-commit-config.yaml.j2  .secrets.baseline.j2  README.md.j2  pyproject.toml.j2
templates/.github/workflows/: ci.yml.j2
templates/src/: __init__.py.j2  client.py.j2
templates/tests/integration/: conftest.py.j2
templates/tests/unit/: conftest.py.j2  test_client.py.j2
