[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-templates"
version = "0.1.0"
description = "Python API templates monorepo"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["api", "templates", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "bandit>=1.7.0",
    "pre-commit>=3.8.0",
]
scripts = [
    "jinja2>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.coverage.run]
source = ["packages", "shared"]
branch = true
parallel = true
omit = [
    "**/tests/*",
    "**/__init__.py",
    "**/main.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]
